# quickrays

./: CMakeLists.txt  Main.qml  johanrenderer.cpp  johanrenderer.h  main.cpp
src/: Main.qml  camera.cpp  camera.h  johanrenderer.cpp  johanrenderer.h  main.cpp  renderer.cpp  renderer.h  scene.h
src/qml/: ActionHandlers.qml  ActionMap.qml  Main.qml
